--- a/package.json
+++ b/package.json
@@ -98,8 +98,8 @@
     "@types/node": "^14.14.17",
     "@types/request": "^2.48.5",
     "@types/rimraf": "^3.0.0",
-    "@types/webpack": "^4.41.25",
     "@types/vscode": "^1.52.0",
+    "@types/webpack": "^4.41.25",
     "adm-zip": "0.5.1",
     "azdata": "^1.0.0",
     "del-cli": "^3.0.1",
@@ -109,12 +109,13 @@
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.13",
     "tslib": "^2.0.3",
-    "typescript": "^4.1.3",
+    "typescript": "^4.2.3",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1"
   },
   "dependencies": {
     "@types/which": "^1.3.2",
+    "tsc": "^1.20150623.0",
     "which": "^2.0.2"
   }
 }
